styles/globals.css
/* ... */
@media (min-width: 992px) {
  .pos-abs-lg {
    position: absolute !important;
  }
}

@media (min-width: 1200px) {
  .pos-abs-xl {
    position: absolute !important;
  }
}

@media (min-width: 992px) {
  .pos-abs-lg-ly-center {
    position: absolute;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
  }
}

@media (min-width: 992px) {
  .pos-abs-lg-ry-center {
    position: absolute;
    top: 50%;
    right: 0;
    transform: translateY(-50%);
  }
}

.pos-abs-tl {
  position: absolute;
  top: 0;
  left: 0;
}

.pos-abs-tr {
  position: absolute;
  top: 0;
  right: 0;
}

.pos-abs-bl {
  position: absolute;
  bottom: 0;
  left: 0;
}

.pos-abs-br {
  position: absolute;
  bottom: 0;
  right: 0;
}

.pos-abs-cr {
  position: absolute;
  top: 50%;
  right: 0;
  transform: translateY(-50%);
}

@media (min-width: 992px) {
  .pos-lg-abs-c {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

.pos-abs-cl {
  position: absolute;
  top: 50%;
  left: 0;
  transform: translateY(-50%);
}

@media (min-width: 480px) {
  .pos-xs-abs-cl {
    position: absolute;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
  }
}

.pos-abs-center {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.pos-abs-br-custom {
  position: absolute;
  bottom: -50px;
  right: -36px;
}

.pos-abs-bl-custom {
  position: absolute;
  bottom: -50px;
  left: -36px;
  z-index: -1;
}

.pos-abs-bl-custom-2 {
  position: absolute;
  left: 30px;
  bottom: 28px;
}

.pos-abs-tl-custom {
  position: absolute;
  top: -6px;
  left: 45px;
}

.pos-abs-tr-custom {
  position: absolute;
  top: -32px;
  right: -38px;
}

@media (min-width: 992px) {
  .left-lg-p20 {
    left: 20%;
  }
}

.translate-n50 {
  transform: translate(-50%, -50%);
}

.translateX-n50 {
  transform: translateX(-50%);
}

.translateY-50 {
  transform: translateY(50%);
}

.chart-postion {
  top: 14px;
  left: 3px;
}

/* ---------------------------
  03.Theme Utility -> { Sizes } 
------------------------------*/
/* Theme Size Utilities */
.min-h-100vh {
  min-height: 100vh;
}

.max-width-130px {
  max-width: 130px;
}

.max-height-px-18 {
  max-height: 18px;
}

.min-height-32 {
  min-height: 32px;
}

.min-width-px-70 {
  min-width: 70px;
}

.min-width-px-80 {
  min-width: 80px;
}

.min-width-px-96 {
  min-width: 96px;
}

.min-width-px-100 {
  min-width: 100px;
}

.min-width-px-110 {
  min-width: 110px;
}

.min-width-px-125 {
  min-width: 125px;
}

.min-width-px-135 {
  min-width: 135px;
}

.min-width-px-155 {
  min-width: 155px;
}

.min-width-px-170 {
  min-width: 170px;
}

.min-width-px-185 {
  min-width: 185px;
}

.min-width-px-205 {
  min-width: 205px;
}

.min-width-px-235 {
  min-width: 235px;
}

.min-width-px-210 {
  min-width: 210px;
}

.min-width-px-273 {
  min-width: 273px;
}

.max-width-px-311 {
  max-width: 311px;
}

.max-width-px-840 {
  max-width: 840px;
}

@media (min-width: 480px) {
  .scale-xs-1 {
    transform: scale(1) !important;
  }
}

.scale-p7 {
  transform: scale(0.7);
}

.h-1173 {
  height: 1173px;
}

.h-1413 {
  height: 1413px;
}

.min-height-px-18 {
  min-height: 18px;
}

@media (min-width: 1366px) {
  .pb-custom-300 {
    padding-bottom: 300px !important;
  }
}

@media (min-width: 1600px) {
  .pb-custom-300 {
    padding-bottom: 130px !important;
  }
}

/* --------------------------------
  03.Theme Utility -> { Typograpy } 
-----------------------------------*/
.letter-spacing-np09 {
  letter-spacing: -0.09px;
}

.line-height-1p6 {
  line-height: 1.6;
}

.line-height-1p4 {
  line-height: 1.4;
}

/* ---------------------------------
  03.Theme Utility -> { Gradient } 
------------------------------------*/
.bg-gradient-1 {
  background-image: linear-gradient(
    to right,
    rgba(0, 176, 116, 0.1) 0%,
    rgba(88, 88, 0, 0.05) 100%
  );
}

.bg-gradient-2 {
  background-image: linear-gradient(180deg, #ffffff 0%, #f4f5f8 100%);
}

/* 
---------------------------------
-------> THEME CUSTOM STYLES 
---------------------------------
*/
.btn-h-60 {
  height: 60px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.table-responsive {
  padding-left: 1px;
  padding-right: 1px;
}

/* ----------------------------
  Hero Form 1
------------------------------*/
.filter-search-form-1 .nice-select .current {
  width: calc(100% - 35px);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 1.2;
}

.filter-search-form-1 .nice-select .list {
  min-width: 290px;
}

/* ----------------------------
  Search list 1
------------------------------*/
.filter-search-form-2.search-1-adjustment .nice-select .current,
.search-filter.search-1-adjustment .nice-select .current {
  width: calc(100% - 35px);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 1.2;
}

.filter-search-form-2.search-1-adjustment .nice-select .list,
.search-filter.search-1-adjustment .nice-select .list {
  min-width: 290px;
}

@media (min-width: 992px) and (max-width: 1199.98px) {
  .card-columns {
    -moz-column-count: 4;
    column-count: 4;
  }
}

@media (min-width: 1200px) and (max-width: 1365.98px) {
  .card-columns {
    -moz-column-count: 5;
    column-count: 5;
  }
}

.testimonial-slider-one {
  position: relative;
}

.testimonial-slider-one .slick-dots {
  position: absolute;
  left: 0;
  bottom: -68px;
  padding: 0;
  margin: 0 auto;
  text-align: center;
  width: 100%;
}

.testimonial-slider-one .slick-dots li {
  display: inline-block;
  width: 12px;
  height: 12px;
  background-color: rgba(255, 255, 255, 0.13);
  margin: 3px;
  border-radius: 50%;
  transition: 0.4s;
}

.testimonial-slider-one .slick-dots li.slick-active {
  background-color: #1292ee;
}

.testimonial-slider-one .slick-dots li button {
  display: none;
}
/* ... */

